# forgotten-protocol

./: .env.example  .gitignore  AGENTS.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
src/ai/: opportunity-review-schema.ts  review-opportunity-if-enabled.ts  review-opportunity.ts  test-review-opportunity.ts
src/cli/: index.ts  parse-args.ts  run-opportunity-scan.ts
src/config/: env.ts  token-registry.ts
src/core/abi/: erc20.ts
src/core/chains/: chains.ts
src/core/classifiers/: token-classifier.ts
src/core/models/: balance-result.ts  opportunity-kind.ts  opportunity-review.ts  opportunity-status.ts  opportunity.ts  reviewed-opportunity.ts  token-balance-result.ts  tokens-registry.ts
src/core/providers/: provider-factory.ts
src/scanners/balances/: erc20-discovery-scanner.ts  erc20-registry-scanner.ts  native-balance-scanner.ts
src/scanners/protocols/: protocol-opportunity-scanner.ts
src/scanners/protocols/aave/: aave-health-check.ts  aave-liquidation-scanner.ts  aave-market-config.ts  aave-profit.estimator.ts  aave-types.ts
src/utils/: format-token-balance.ts
